# femtolog

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  README_ja.md  benchmark_results.txt  cc  pyproject.toml
.github/workflows/: build.yml  ci.yml
.github/workflows/scripts/: summarize.py
src/: CMakeLists.txt
src/bench/: CMakeLists.txt  bench_main.cc  benchmark_util.h  femtolog_bench.cc  format_bench.cc  quill_bench.cc  run_bench.sh  spdlog_bench.cc
src/bench/results/: .gitignore
src/bench/results/archive/: 2025-07-03_02-57-58.txt  2025-07-03_04-12-02.txt  2025-07-03_20-33-05.json  2025-07-03_20-33-05.txt  2025-07-05_22-25-42.json
src/core/: CMakeLists.txt  check.cc  check.h
src/core/base/: core_export.h  file_util.cc  file_util.h  file_util_bench.cc  file_util_test.cc  memory_util.cc  string_util.cc  string_util.h  string_util_bench.cc  string_util_test.cc
src/core/diagnostics/: signal_handler.cc  stack_trace.cc  stack_trace_entry.cc  terminate_handler.cc
src/femtolog/: CMakeLists.txt  femtolog.cc  femtolog_bench.cc  femtolog_test.cc  logger.cc
src/femtolog/base/: femtolog_export.h
src/include/: CMakeLists.txt
src/include/femtolog/: femtolog.h  logger.h  options.h
src/include/femtolog/base/: femtolog_export.h  format_string_registry.h  format_util.h  log_entry.h  log_level.h  serialize_util.h  string_registry.h
src/include/femtolog/core/: check.h
src/include/femtolog/core/base/: core_export.h  file_util.h  memory_util.h  string_util.h
src/include/femtolog/core/diagnostics/: signal_handler.h  stack_trace.h  stack_trace_entry.h  terminate_handler.h
src/include/femtolog/logging/base/: logging_export.h
src/include/femtolog/logging/impl/: args_deserializer.h  args_serializer.h  backend_worker.h  internal_logger.h  spmc_queue.h  spsc_queue.h
src/include/femtolog/sinks/: file_sink.h  json_lines_sink.h  null_sink.h  sink_base.h  stdout_sink.h
src/logging/: CMakeLists.txt
src/logging/base/: logging_export.h
src/logging/impl/: args_deserializer.h  args_deserializer_bench.cc  args_deserializer_test.cc  args_serializer.h  args_serializer_bench.cc  args_serializer_test.cc  backend_worker.cc  backend_worker.h  backend_worker_bench.cc  backend_worker_test.cc  internal_logger.cc  internal_logger.h  internal_logger_bench.cc  internal_logger_test.cc  logger.cc  spmc_queue.cc  spmc_queue_bench.cc  spmc_queue_test.cc  spsc_queue.cc  spsc_queue.h  spsc_queue_bench.cc  spsc_queue_test.cc
src/testing/: CMakeLists.txt  femtolog_test.cc  test_main.cc
